manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-server
  namespace: pks-argocd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-server
  template:
    metadata:
      labels:
        app: demo-server
    spec:
      containers:
        - name: demo-server
          image: "ghcr.io/poolc/pks-argocd-demo:8c3037a6c47605cc4c4bb6f2159838a60a3f8f95"
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
