manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-server
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: demo-server
