manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-server
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    argocd.argoproj.io/sync-wave: "1"
spec:
  ingressClassName: nginx
  rules:
    - host: ci-cd.demo.dev.poolc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-server
                port:
                  number: 8080
